--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=news_api
+DB_DATABASE=nexus_db
 DB_USERNAME=secret
 DB_PASSWORD=password
 
